# crypto-signal-bot

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: build-and-push.yml  ci.yml  deploy-production.yml  deploy-staging.yml  integration-tests.yml  release.yml  security-scan.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep
docker/: .dockerignore  Dockerfile.api  Dockerfile.bot  Dockerfile.scheduler  Dockerfile.web  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml
docker/entrypoints/: api-entrypoint.sh  bot-entrypoint.sh  scheduler-entrypoint.sh
docker/healthchecks/: api_healthcheck.sh  bot_healthcheck.sh  scheduler_healthcheck.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: api.conf  dashboard.conf  ssl.conf
docker/nginx/snippets/: rate-limit.conf  security-headers.conf
docker/postgres/init/: 01-init-extensions.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CONFIGURATION.md  DEPLOYMENT.md  INSTALLATION.md  TROUBLESHOOTING.md
files/: ccxt_exchange_client.py  exchange_client.py  exchange_exceptions.py  rate_limiter.py
scripts/: healthcheck.sh  init_db.sh  run_migrations.sh  seed_data.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  dependencies.py  exception_handlers.py
src/api/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  rate_limit_middleware.py  request_logging_middleware.py
src/api/routers/: auth_router.py  health_router.py  history_router.py  performance_router.py  signals_router.py  statistics_router.py  subscriptions_router.py  users_router.py
src/api/schemas/: auth_schema.py  common_schema.py  performance_schema.py  signal_schema.py  statistics_schema.py  subscription_schema.py  trade_history_schema.py  user_schema.py
src/application/: __init__.py
src/application/analyzers/: __init__.py  confluence_weights.py  indicator_confluence_analyzer.py  smc_confluence_analyzer.py  trend_analyzer.py
src/application/dto/: __init__.py  market_snapshot_dto.py  risk_evaluation_dto.py  signal_analysis_dto.py  signal_dto.py  subscription_dto.py
src/application/services/: __init__.py  ai_signal_engine.py  auth_service.py  break_even_service.py  consecutive_loss_tracker_service.py  daily_loss_limit_service.py  entry_exit_calculator_service.py  liquidation_service.py  market_data_service.py  notification_service.py  order_book_service.py  position_sizing_service.py  reasoning_service.py  risk_management_service.py  signal_generation_service.py  statistics_aggregation_service.py  stop_loss_service.py  subscription_service.py  take_profit_service.py  trailing_stop_service.py  user_service.py
src/application/strategies/: __init__.py  base_strategy.py  bollinger_bands_strategy.py  ema_crossover_strategy.py  macd_strategy.py  rsi_strategy.py  smc_confluence_strategy.py  strategy_aggregator.py
src/application/use_cases/: __init__.py  authenticate_user_use_case.py  broadcast_signal_use_case.py  evaluate_trade_risk_use_case.py  generate_signal_use_case.py  get_performance_summary_use_case.py  get_signal_history_use_case.py  manage_user_use_case.py  record_trade_result_use_case.py  subscribe_user_use_case.py  unsubscribe_user_use_case.py  update_position_on_price_tick_use_case.py
src/config/: __init__.py  logger.py  settings.py
src/core/: __init__.py
src/core/domain/: __init__.py
src/core/exceptions/: __init__.py  repository_exceptions.py  risk_exceptions.py  signal_exceptions.py  validation_exceptions.py
src/core/interfaces/: __init__.py  account_state_repository.py  cache_provider.py  candle_repository.py  indicator_strategy.py  liquidation_stream.py  market_data_provider.py  notifier.py  position_repository.py  reasoning_generator.py  signal_repository.py  user_repository.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  openai_reasoning_generator.py
src/infrastructure/cache/: __init__.py  redis_cache.py
src/infrastructure/database/: __init__.py  base.py  session.py  unit_of_work.py
src/infrastructure/exchanges/: __init__.py  exchange_factory.py  liquidation_ws_client.py  retry_policy.py  symbol_normalizer.py
src/infrastructure/security/: __init__.py  encryption.py  jwt_handler.py  password_hasher.py  permissions.py
src/infrastructure/telegram/: __init__.py  bot.py  constants.py  notifier_impl.py
src/scheduler/: __init__.py  job_scheduler.py
src/scheduler/jobs/: __init__.py  cleanup_job.py  funding_rate_poll_job.py  liquidation_stream_job.py  open_interest_poll_job.py  position_monitor_job.py  signal_scan_job.py  signal_status_update_job.py  (+1 more)
src/utils/: datetime_utils.py  decorators.py  indicators.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  ohlcv_fixtures.py  signal_fixtures.py  smc_fixtures.py  user_fixtures.py
tests/integration/: __init__.py
tests/mocks/: __init__.py  mock_exchange_client.py  mock_liquidation_stream.py  mock_notifier.py  mock_reasoning_generator.py  mock_repositories.py
tests/unit/: __init__.py
web-dashboard/: .env.example  .gitignore  index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web-dashboard/src/: App.tsx  main.tsx
(+255 files in other folders)
