[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signal-bot"
version = "1.0.0"
description = "Production-ready AI-powered crypto signal generation and Telegram notification system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Crypto Signal Bot Team" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Private :: Do Not Upload",
]

dependencies = [
    # --- Web Framework / API ---
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",

    # --- Telegram Bot ---
    "python-telegram-bot[job-queue]==22.0",

    # --- Database ---
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",

    # --- Caching ---
    "redis==5.2.1",
    "hiredis==3.1.0",

    # --- Configuration ---
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",

    # --- Exchange Integration ---
    "ccxt==4.4.44",

    # --- Data / Technical Analysis ---
    "pandas==2.2.3",
    "numpy==2.2.1",
    "ta==0.11.0",

    # --- Scheduling ---
    "apscheduler==3.11.0",

    # --- Security ---
    "pyjwt==2.10.1",
    "passlib[argon2]==1.7.4",
    "cryptography==44.0.0",

    # --- HTTP Client ---
    "httpx==0.28.1",

    # --- AI / Reasoning ---
    "openai==1.58.1",

    # --- Observability ---
    "structlog==24.4.0",
    "sentry-sdk==2.19.2",
    "prometheus-client==0.21.1",

    # --- Rate Limiting ---
    "slowapi==0.1.9",

    # --- Utilities ---
    "python-dateutil==2.9.0.post0",
    "tenacity==9.0.0",
    "orjson==3.10.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.1",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",
    "testcontainers[postgres]==4.9.0",
    "faker==33.1.0",
    "respx==0.22.0",
    "aioresponses==0.7.7",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "types-python-dateutil==2.9.0.20241206",
    "pre-commit==4.0.1",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]

# =============================================================================
# Ruff — linting and formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [
    "alembic/versions",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # allow assert (used in tests)
    "B008",   # allow function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"alembic/versions/*" = ["E501", "N999"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "application", "infrastructure", "api", "scheduler", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# =============================================================================
# Mypy — static type checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "ta.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast, fully isolated tests with no external dependencies",
    "integration: tests requiring a real database/service container",
    "slow: tests that take significant time to run",
]
addopts = "-v --strict-markers --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:ccxt.*",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/*/__init__.py",
    "src/main.py",
    "alembic/versions/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
